@@ -1,4 +1,5 @@
-(add new changes on top of this file)
+10-05-26 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* replaced deprecated functions
 
 06-11-23 Ivan Kartolo  <ivan.kartolo@dkd.de>
 
